--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
@@ -70,6 +70,7 @@
         prop="text"
         v-if="getFieldShow('text')"
         label="WBS任务名称"
+        min-width="280"
       ></el-table-column>
       <el-table-column
         prop="wbs"
@@ -137,7 +138,7 @@
         <template slot-scope="scope">
           <div
             class="type-one"
-            v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'"
+            v-show="scope.row.task_type==='1'||scope.row.task_type==='2'||scope.row.task_type==='3'"
           >
             <div
               class="checek-man"
@@ -157,7 +158,7 @@
         <template slot-scope="scope">
           <div
             class="type-one"
-            v-show="scope.row.task_type==='1'||scope.row.task_type==='2'|scope.row.task_type==='3'"
+            v-show="scope.row.task_type==='1'||scope.row.task_type==='2'||scope.row.task_type==='3'"
           >
             <div
               class="checek-man"
