--- a/资源负载页面自定义控件/resource_load_table_v1.1/html/resource_load_table.html
+++ b/资源负载页面自定义控件/resource_load_table_v1.1/html/resource_load_table.html
@@ -1,6 +1,5 @@
 <!-- <!DOCTYPE html>
 <html lang="en">
-
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -19,24 +18,47 @@
         <div>资源分配</div>
       </div>
       <div class="left-info-box" @scroll="scrollLeft" ref="leftInfoBox">
-        <div class="table-left-item" v-for="(item,index) in resourceData" :key="index">
+        <div
+          class="table-left-item"
+          v-for="(item,index) in resourceData"
+          :key="index"
+        >
           <div class="resource-info-name">
-            <div @click="arrowClick(item)" v-if="item.open" class="arrow-icon-close"></div>
+            <div
+              @click="arrowClick(item)"
+              v-if="item.open"
+              class="arrow-icon-close"
+            ></div>
             <div @click="arrowClick(item)" v-else class="arrow-icon-open"></div>
             ${item.resourceInfo.label}
           </div>
           <div v-show="item.open">
-            <div class="level-two resource-usability">${item.resourceUsability.label}</div>
-            <div class="level-two resource-capacity">${item.resourceCapacity.label}</div>
+            <div class="level-two resource-usability">
+              ${item.resourceUsability.label}
+            </div>
+            <div class="level-two resource-capacity">
+              ${item.resourceCapacity.label}
+            </div>
             <div class="resource-project-allocation">
-              <div @click="arrowClick(item.projectAllocation)" v-if="item.projectAllocation.open"
-                class="arrow-icon-close">
-              </div>
-              <div @click="arrowClick(item.projectAllocation)" v-else class="arrow-icon-open"></div>
+              <div
+                @click="arrowClick(item.projectAllocation)"
+                v-if="item.projectAllocation.open"
+                class="arrow-icon-close"
+              ></div>
+              <div
+                @click="arrowClick(item.projectAllocation)"
+                v-else
+                class="arrow-icon-open"
+              ></div>
               ${item.projectAllocation.label}
             </div>
             <div v-show="item.projectAllocation.open">
-              <div class="level-three" v-for="pro in item.projectAllocation.projectInfo">${pro.label}</div>
+              <div
+                class="level-three"
+                v-for="pro in item.projectAllocation.projectInfo"
+              >
+                ${pro.label}
+              </div>
             </div>
           </div>
         </div>
@@ -49,22 +71,46 @@
       <div class="rigth-info-box" @scroll="scrollRight" ref="rightInfoBox">
         <div class="rigth-info-item" v-for="item in resourceData">
           <div class="table-item table-right-value resource_info">
-            <div class="date-span" v-for="(val,index) in item.resourceInfo.value">${val}${val!==""?unit:""}</div>
+            <div
+              class="date-span"
+              v-for="(val,index) in item.resourceInfo.value"
+            >
+              ${val}${val!==""?unit:""}
+            </div>
           </div>
           <div v-show="item.open">
             <div class="table-item table-right-value resource_usability">
-              <div class="date-span" v-for="(val,index) in item.resourceUsability.value">${val}${val!==""?unit:""}</div>
+              <div
+                class="date-span"
+                v-for="(val,index) in item.resourceUsability.value"
+              >
+                ${val}${val!==""?unit:""}
+              </div>
             </div>
             <div class="table-item table-right-value resource_capacity">
-              <div class="date-span" v-for="(val,index) in item.resourceCapacity.value">${val}${val!==""?unit:""}</div>
+              <div
+                class="date-span"
+                v-for="(val,index) in item.resourceCapacity.value"
+              >
+                ${val}${val!==""?unit:""}
+              </div>
             </div>
             <div class="table-item table-right-value project_allocation">
-              <div class="date-span" v-for="(val,index) in item.projectAllocation.value">${val}${val!==""?unit:""}</div>
+              <div
+                class="date-span"
+                v-for="(val,index) in item.projectAllocation.value"
+              >
+                ${val}${val!==""?unit:""}
+              </div>
             </div>
             <div v-show="item.projectAllocation.open">
-              <div class="table-item table-right-value projects_info"
-                v-for="(pro,index) in item.projectAllocation.projectInfo">
-                <div class="date-span" v-for="(val,index) in pro.value">${val}${val!==""?unit:""}</div>
+              <div
+                class="table-item table-right-value projects_info"
+                v-for="(pro,index) in item.projectAllocation.projectInfo"
+              >
+                <div class="date-span" v-for="(val,index) in pro.value">
+                  ${val}${val!==""?unit:""}
+                </div>
               </div>
             </div>
           </div>
@@ -74,8 +120,7 @@
   </div>
 </div>
 <!-- <script src="../js/vue.min.js"></script>
-<script src="../js/vue.js"></script>
-<script src="../js/test.js"></script>
-</body>
-
+    <script src="../js/vue.js"></script>
+    <script src="../js/test.js"></script>
+  </body>
 </html> -->
