--- a/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
+++ b/执行管理--质量计划--资源调配/resource_allocation_v1.1_cache/html/resource_allocation.html
@@ -27,13 +27,13 @@
     >
       设置持续时间
     </button>
-    <button
+    <!-- <button
       class="btn-itme"
       :disabled="getBtnShow('go_allocation')"
       @click="goAllocation"
     >
       资源调配
-    </button>
+    </button> -->
   </div>
   <div class="table-box">
     <el-table
